# xfce4-gpu-plugin

./: CHANGELOG.txt  LICENSE  Makefile.am  README.md  configure.ac
xfce4-gpu-plugin/: Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure~  libtool
xfce4-gpu-plugin/autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.2  traces.3  traces.4  traces.5
xfce4-gpu-plugin/src/: Makefile  Makefile.am  Makefile.in  libxfce4-gpu-plugin.la  libxfce4_gpu_plugin_la-xfce4-gpu-plugin.lo  xfce4-gpu-plugin.c  xfce4-gpu-plugin.desktop.in
